--- a/index.html
+++ b/index.html
@@ -1,29 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>   
     <link rel="stylesheet" href="style.css">
     <title>starFlix</title>
 </head>
 
 <body>
-    <header>
-
-        <h1>The Conjuring</h1>
-
-        
-    </header>
+    <header>starFlix</header>
 
     <section>
+        <div class="chamada-texto">
+        <h1>The Conjuring</h1>
+        <p>#theconjuring</p>]
+        </div>
+
 
         <div>
 
-            <h1>é um filme de terror baseado em casos reais de Ed e Lorraine Warren, investigadores paranormais,
-                que foram chamados para ajudar famílias assombradas por forças sobrenaturais.
-
-                <p>
                     <iframe width="1323" height="744" src="https://www.youtube.com/embed/FSAz556s0fM"
                         title="The Conjuring: Last Rites | Official Teaser" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
