--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>   
     <link rel="stylesheet" href="style.css">
     <title>starFlix</title>
@@ -12,8 +11,8 @@
     <section>
         <div class="chamada-texto">
         <h1>The Conjuring</h1>
-        <p>#theconjuring</p>]
-        </div>
+        <p>#theconjuring</p>
+        <div class="categoria-videos">
 
 
         <div>
@@ -25,15 +24,26 @@
         </div>
 
 
-    </section>
+<section class="categoria">
     <h2>mais vídeos</h2>
-    <div>
+    <div class="categoria-videos">
 
 <a href="https://www.youtube.com/watch?v=HcUvtW94NCg">
-    
+    <img src="https://img.youtube.com/vi/HcUvtW94NCg/maxresdefault.jpg">
 </a>
 
+<a href="https://www.youtube.com/watch?v=PBDCSMbcIHM">
+    <img src="https://img.youtube.com/vi/PBDCSMbcIHM/maxresdefault.jpg">
 
+</a>
+
+<a href="https://www.youtube.com/watch?v=E9OA63tRpMQ">
+    <img src="https://img.youtube.com/vi/E9OA63tRpMQ/maxresdefault.jpg">
+
+</a>
+
+<a href="https://www.youtube.com/watch?v=SMaV6KHKWrs">
+    <img src="https://img.youtube.com/vi/SMaV6KHKWrs/maxresdefault.jpg">
 
 
 
