--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <div class="chamada-texto">
         <h1>The Conjuring</h1>
         <p>#theconjuring</p>
-        <div class="categoria-videos">
+        </div>
 
+        
 
         <div>
 
