--- a/index.html
+++ b/index.html
@@ -1,54 +1,14 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-    <link rel="stylesheet" href="style.css">
-    <title>starFlix</title>
-</head>
-
-<body>
-    <header>starFlix</header>
-
-    <section>
-        <div class="chamada-texto">
-            <h1>The Conjuring</h1>
-            <p>#theconjuring</p>
+<main>
+        <div class="passo ativo" id="passo-0">
+            <img src="img/cenario-passo0.png" alt="">
+            <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida,
+                escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar
+                essa cidade e eu decidi segui-las!</p>
+            <button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
+            <button class="btn-proximo" data-proximo="2">Pernambuco</button>
         </div>
-
-
-
-        <div>
-
-            <iframe width="1323" height="744" src="https://www.youtube.com/embed/FSAz556s0fM"
-                title="The Conjuring: Last Rites | Official Teaser" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-
-
-        <section class="categoria">
-            <h2>mais vídeos</h2>
-            <div class="categoria-videos">
-
-                <a href="https://www.youtube.com/watch?v=HcUvtW94NCg">
-                    <img src="https://img.youtube.com/vi/HcUvtW94NCg/maxresdefault.jpg">
-                </a>
-
-                <a href="https://www.youtube.com/watch?v=PBDCSMbcIHM">
-                    <img src="https://img.youtube.com/vi/PBDCSMbcIHM/maxresdefault.jpg">
-
-                </a>
-
-                <a href="https://www.youtube.com/watch?v=E9OA63tRpMQ">
-                    <img src="https://img.youtube.com/vi/E9OA63tRpMQ/maxresdefault.jpg">
-
-                </a>
-
-                <a href="https://www.youtube.com/watch?v=SMaV6KHKWrs">
-                    <img src="https://img.youtube.com/vi/SMaV6KHKWrs/maxresdefault.jpg">
-
-
-
-</body>
-
-</html>
+        <div class="passo" id="passo-1">
+            <p>Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer para encontrar a primeira pista.</p>
+            <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
+            <button class="btn-proximo" data-proximo="4">Desistir e voltar para casa</button>
+        
